2006-10-28  Loic Minier <lool@dooz.org>

	* testsuite/run-test-satisfy-depends.sh,
	testsuite/satisfydepends/debian/rules: new testsuite scripts to
	test pbuilder-satisfydepends.
	* testsuite/satisfydepends/gtk2-engines_*.changelog,
	testsuite/satisfydepends/gtk2-engines_*.control: initial test data.
	* testsuite/run-test-satisfy-depends.log: initial test results.
	* testsuite/run-test-satisfy-depends.sh: fix invocation from CVS
	checkout by only copying debian/rules and not debian/*.

2006-10-27  Junichi Uekawa  <dancer@debian.org>

	* Documentation/pbuilder-doc.xml: update developers documentation.

2006-10-24  Junichi Uekawa  <dancer@debian.org>

	* examples/E50-initscripts-2.86.ds1-7.workaround.sh: workaround
	postinst which mounts /lib/init/rw

	* Documentation/pbuilder-doc.xml: remove the note saying that
	pbuilder-user-mode-linux is not available.

2006-10-23  Junichi Uekawa  <dancer@debian.org>

	* Documentation/pbuilder-doc.xml: s/cowdancer/cowbuilder/

2006-09-16  Junichi Uekawa  <dancer@debian.org>

	* added patch from Mattia Dongili <malattia@linux.it> for pbuilder-uml.
	diffstat /tmp/pbuilder-uml.diff 
	debian/rules             |   16 ++++++++++++++--
	pbuilder-checkparams     |    2 +-
	pbuilder-uml-checkparams |    2 +-
	pbuilder-user-mode-linux |   20 +++++++++++++++-----
	pdebuild-uml-checkparams |    2 +-
	pdebuild-user-mode-linux |    2 +-
	6 files changed, 33 insertions(+), 11 deletions(-)

2006-09-03  Junichi Uekawa  <dancer@debian.org>

	* examples/B90linda, etc.: add notice that it's usable for hookdir.

2006-09-02  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-checkparams (BASEBUILDPLACE): support --login, --execute, --pdebuild

2006-08-25  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-modules: support for selinux.

2006-08-20  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-checkparams: sort and reverse-sort bindmounts
	* pbuilder-modules: 

2006-08-15  Junichi Uekawa  <dancer@debian.org>
