@@ -1,3 +1,7 @@
+2006-10-29  Junichi Uekawa  <dancer@debian.org>
+
+	* Documentation/pbuilder-doc.xml: developer info is updated.
+
 2006-10-28  Loic Minier <lool@dooz.org>
 
 	* testsuite/run-test-satisfy-depends.sh,
